// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AusbauFilters should match snapshot if no layer defined, should display null. 1`] = `""`;

exports[`AusbauFilters should match snapshot if showFilterParam is an empty string, should display a select box. 1`] = `
<div class="MuiFormControl-root makeStyles-formControl-4 MuiFormControl-fullWidth">
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
         data-shrink="true"
  >
    angebotsschritt
  </label>
  <div class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl">
    <div class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
         tabindex="0"
         role="button"
         aria-haspopup="listbox"
    >
      Projekte im Bau
    </div>
    <input aria-hidden="true"
           tabindex="-1"
           class="MuiSelect-nativeInput"
           value
    >
    <svg class="MuiSvgIcon-root MuiSelect-icon"
         focusable="false"
         viewbox="0 0 24 24"
         aria-hidden="true"
    >
      <path d="M7 10l5 5 5-5z">
      </path>
    </svg>
  </div>
</div>
`;

exports[`AusbauFilters should match snapshot if showFilterParam is true, should display a select box. 1`] = `
<div class="MuiFormControl-root makeStyles-formControl-3 MuiFormControl-fullWidth">
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
         data-shrink="true"
  >
    angebotsschritt
  </label>
  <div class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl">
    <div class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
         tabindex="0"
         role="button"
         aria-haspopup="listbox"
    >
      Projekte im Bau
    </div>
    <input aria-hidden="true"
           tabindex="-1"
           class="MuiSelect-nativeInput"
           value
    >
    <svg class="MuiSvgIcon-root MuiSelect-icon"
         focusable="false"
         viewbox="0 0 24 24"
         aria-hidden="true"
    >
      <path d="M7 10l5 5 5-5z">
      </path>
    </svg>
  </div>
</div>
`;

exports[`AusbauFilters should match snapshot if showFilterParam is undefined or null, should display null. 1`] = `""`;
